# axum-sql-viewer

./: .gitignore  Cargo.toml
axum-sql-viewer/src/database/: postgres.rs  sqlite.rs
example-server/: Cargo.toml
