[workspace]
members = ["axum-sql-viewer", "example-server"]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "AGPL-3.0"
authors = ["firstdorsal", "Ukko Ylijumala"]
repository = "https://github.com/Ukko-Ylijumala/axum-sql-viewer"
homepage = "https://github.com/Ukko-Ylijumala/axum-sql-viewer"
documentation = "https://docs.rs/axum-sql-viewer"
keywords = ["axum", "sql", "database", "viewer", "development"]
categories = ["development-tools", "web-programming", "database"]
description = "A development tool for viewing SQL tables in web browsers, easily integrable as an Axum layer"
readme = "README.md"
publish = false

[workspace.dependencies]
tokio = { version = ">=1.45", features = ["rt-multi-thread", "macros", "time"] }

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
thiserror = "2.0.18"
async-trait = "0.1"
tracing = "0.1.44"

# Frontend embedding
include_dir = "0.7"
mime_guess = "2"

# Database
[workspace.dependencies.sqlx]
#version = ">=0.8.6"
git = "https://github.com/launchbadge/sqlx"
features = ["runtime-tokio", "chrono", "uuid"]
