[package]
name = "example-server"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["firstdorsal", "Ukko Ylijumala"]
repository = "https://github.com/Ukko-Ylijumala/axum-sql-viewer"
homepage = "https://github.com/Ukko-Ylijumala/axum-sql-viewer"
description = "Example Axum server demonstrating axum-sql-viewer integration"
publish = false

[dependencies]
tokio = { version = ">=1.45", features = ["rt-multi-thread", "macros"] }

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
thiserror = "2.0.18"
async-trait = "0.1"

# Local dependency
axum-sql-viewer = { path = "../axum-sql-viewer" }

# Database
[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
features = ["runtime-tokio", "sqlite"]
